2006-03-24 [colin]	2.0.0cvs168

	* src/action.c
	* src/summaryview.c
	* src/summaryview.h
		Update message cache after action
		Patch by H. Merijn Brand
	* src/prefs_msg_colors.c
		Factorize label 
		Patch by Fabien Vantard
	* src/plugins/spamassassin/spamassassin_gtk.c
		Remove useless translation
		Patch by Fabien Vantard

2006-03-23 [colin]	2.0.0cvs167

	* src/common/ssl.c
		Let 30 seconds to SSL_connect

2006-03-23 [wwp]	2.0.0cvs166

	* src/summaryview.c
	* src/gtk/description_window.c
		fix display of From/To column title when in appropriate folders (queue/sent/drafts)
		and headers are translated; adjust description windows' width to fit their
		contents. Patches by Pawel Pekala <c0rn@o2.pl>.

2006-03-23 [paul]	2.0.0cvs165

	* src/common/utils.c
		fix highlighting of URIs containing "()"
		(2.0.0cvs164's reversal fixed)
		Thanks to Colin.

2006-03-23 [paul]	2.0.0cvs164

	* src/common/utils.c
		revert patch, (postponing a fix), at 2.0.0cvs120
		as it breaks more URIs than it fixes.
		Allow '-' to be a terminating character in a URI

2006-03-22 [colin]	2.0.0cvs163

	* configure.ac
		Require libetpan 0.45
		http://prdownloads.sourceforge.net/libetpan/libetpan-0.45.tar.gz?download

2006-03-22 [paul]	2.0.0cvs162

	* src/editgroup.c
		replace '<-' and '->' buttons with GTK_STOCK graphical
		buttons
	* src/summary_search.c
		don't offer '...' for translation
		add a tooltip to advanced search '...' button
	* src/gtk/quicksearch.c
		don't offer '...' for translation

2006-03-21 [colin]	2.0.0cvs161

	* src/compose.c
		Fix middle-click pasting (insert at click
		position instead of cursor position, don't
		remove existing selection and allow pasting
		our own selection)
	* src/addressbook.c
		"LDAP Server" -> "LDAP servers"

2006-03-21 [wwp]	2.0.0cvs160

	* src/etpan/imap-thread.c
		fix for bug #925 (IMAP+SSL crash), thanks to Colin.

2006-03-20 [colin]	2.0.0cvs159

	* src/summaryview.c
		Don't reload summaryview after an execute with no
		move action
