@@ -1354,3 +1354,4 @@
 ( cvs diff -u -r 1.395.2.185 -r 1.395.2.186 src/summaryview.c;  cvs diff -u -r 1.5.2.17 -r 1.5.2.18 src/gtk/description_window.c;  ) > 2.0.0cvs166.patchset
 ( cvs diff -u -r 1.9.2.12 -r 1.9.2.13 src/common/ssl.c;  ) > 2.0.0cvs167.patchset
 ( cvs diff -u -r 1.12.2.32 -r 1.12.2.33 src/action.c;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/prefs_msg_colors.c;  cvs diff -u -r 1.395.2.186 -r 1.395.2.187 src/summaryview.c;  cvs diff -u -r 1.68.2.20 -r 1.68.2.21 src/summaryview.h;  cvs diff -u -r 1.23.2.26 -r 1.23.2.27 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 2.0.0cvs168.patchset
+( cvs diff -u -r 1.75.2.17 -r 1.75.2.18 src/matcher.c;  cvs diff -u -r 1.3.2.5 -r 1.3.2.6 src/common/quoted-printable.c;  cvs diff -u -r 1.3.2.2 -r 1.3.2.3 src/common/quoted-printable.h;  ) > 2.0.0cvs169.patchset
